src/test/run-pass/leak-unique-as-tydesc.rs


fn leaky<T>(t: T) { }

fn main() { let x = ~10; leaky::<~int>(x); }
