src/test/compile-fail/swap-uninit.rs
// error-pattern:unsatisfied precondition

fn main() { let x = 3; let y; x <-> y; }
